added install of ia32-libs so Pharo can hopefully run on 64-bit VM

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
    - export PROJECT_HOME="$(pwd)"
    - cd $HOME
    - uname -a
+   - apt-get install ia32-libs
    - wget -O builderCI.zip https://github.com/dalehenrich/builderCI/zipball/master
    - unzip -q builderCI.zip
    - cd dalehenrich-builderCI*
