--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ env:
 install:
    - export PROJECT_HOME="$(pwd)"
    - cd $HOME
-   - uname -a
-   - sudo apt-get install libc6:i386
-   - wget -O builderCI.zip https://github.com/dalehenrich/builderCI/zipball/master
+   - wget -q -O builderCI.zip https://github.com/dalehenrich/builderCI/zipball/master
    - unzip -q builderCI.zip
    - cd dalehenrich-builderCI*
    - source build_env_vars
