Removed Squeak 4.3 from Travis test config -- only test on Pharo 1.4 until/unless someone expresses interest in running this on Squeak.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: erlang
 
 # Choose which platforms you want your builds run against (done in parallel)
-env:
-   - ST=Pharo-1.4
-   - ST=Squeak-4.3
+env: ST=Pharo-1.4
+#   - ST=Pharo-1.4 
+#   - ST=Squeak-4.3
 
 # Boilerplate ... should be no reason to edit the install section
 install:
